# metis

./: .dockerignore  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  GEMINI.md  LLM.md  README.md  RELEASE_CHECKLIST.md  build.rs  docker-compose.yml  justfile  metis-action-items.md  metis-implementation-plan.md  metis-review.md  metis.toml  prometheus.yml
.github/workflows/: cd.yml  ci.yml  release.yml
benches/: mock_strategies.rs  request_handling.rs
config/: metis.toml
docs/: datafusion.md  faker-strategies.json
examples/: advanced.toml  auth.md  basic.toml  llm.toml
examples/data/: products.json  responses.json
src/: cli.rs  lib.rs  main.rs
src/adapters/: api_handler.rs  auth_middleware.rs  data_lake_handler.rs  database_strategy_test.rs  datafusion_handler.rs  encryption.rs  file_storage.rs  health_handler.rs  jwks.rs  logging_handler.rs  mcp_client.rs  mcp_protocol_handler.rs  mcp_protocol_handler_test.rs  metrics_handler.rs  mock_strategy.rs  mock_strategy_test.rs  mod.rs  prompt_handler.rs  rate_limit.rs  resource_handler.rs  resource_handler_test.rs  rmcp_server.rs  sampling_handler.rs  secrets.rs  session_manager.rs  state_manager.rs  tool_handler.rs  tool_handler_test.rs  ui_handler.rs  workflow_engine.rs  workflow_engine_test.rs
src/agents/: config.rs  error.rs  handler.rs  mod.rs
src/agents/core/: mod.rs  multi_turn.rs  react.rs  single_turn.rs
src/agents/domain/: agent.rs  message.rs  mod.rs  response.rs  tool_call.rs
src/agents/llm/: anthropic.rs  azure.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  stream.rs
src/agents/memory/: database.rs  file.rs  in_memory.rs  mod.rs  strategy.rs
src/agents/orchestration/: collaborative.rs  hierarchical.rs  mod.rs  sequential.rs
src/agents/token/: budget.rs  counter.rs  mod.rs
src/config/: data_lake.rs  file_storage.rs  mod.rs  s3.rs  s3_watcher.rs  schema.rs  validator.rs  watcher.rs
src/domain/: auth.rs  mcp_types.rs  mod.rs  sampling.rs
src/persistence/: data_record_repository.rs  error.rs  migrations.rs  mod.rs  models.rs  pool.rs  repository.rs
tests/: api_integration_test.rs  config_test.rs  e2e_mcp_client_test.rs
tests/integration/: health_test.rs  mcp_protocol_test.rs  mod.rs  resource_tags_test.rs
tests/integration/common/: test_server.rs
ui/: Cargo.toml  index.html  style.css
ui/src/: api.rs  lib.rs  types.rs
ui/src/components/: agents.rs  artifact_selector.rs  config.rs  dashboard.rs  data_lake_crud_editor.rs  data_lakes.rs  database_editor.rs  json_editor.rs  list_filter.rs  logs.rs  mod.rs  prompts.rs  resource_templates.rs  resources.rs  schema_editor.rs  schemas.rs  secrets.rs  sql_editor.rs  step_editor.rs  tools.rs  version_history.rs  workflows.rs
ui/src/components/schema_form/: array_field.rs  faker_selector.rs  fields.rs  generator.rs  mod.rs  resolver.rs  types.rs  variant_selector.rs
