[package]
name = "metis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tera = "1"
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"
notify = "6.1"
rhai = { version = "1.16", features = ["sync", "serde"] }
serde_yaml = "0.9"
glob = "0.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"

