[workspace]
members = ["ui"]

[[workspace.metadata.leptos]]
name = "metis-app"
bin-package = "metis"
lib-package = "metis-ui"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "ui/style.css"

[package]
name = "metis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
rmcp = { version = "0.10", features = ["server", "client", "macros", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "tower"] }
schemars = "0.8"
tera = "1"
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"
notify = "6.1"
rhai = { version = "1.16", features = ["sync", "serde"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "serialize", "send"] }
boa_engine = { version = "0.19" }
boa_gc = { version = "0.19" } # Needed for Gc pointers
rustpython-vm = { version = "0.4.0", features = ["compiler"] }
serde_yaml = "0.9"
glob = "0.3"
prometheus = "0.13"
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["auth", "cors", "fs"] }
async-openai = "0.20"
tiktoken-rs = "0.5"
backoff = { version = "0.4", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json", "stream"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "mysql", "sqlite"] }
base64 = "0.21"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
governor = "0.10.2"
clap = { version = "4", features = ["derive", "env"] }
aws-config = "1.5"
aws-sdk-s3 = "1.65"
futures = "0.3"
toml = "0.8"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }
age = "0.10"
secrecy = "0.10"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# DataFusion and Arrow ecosystem for file storage and analytics
datafusion = "44"
datafusion-functions-json = "0.44"
arrow = { version = "54", features = ["json", "prettyprint"] }
parquet = { version = "54", features = ["async"] }
object_store = { version = "0.11", features = ["aws"] }
bytes = "1"
tokio-stream = "0.1.17"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
reqwest = { version = "0.11", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
http-body-util = "0.1"
tempfile = "3"
rmcp = { version = "0.10", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }

[[bench]]
name = "mock_strategies"
harness = false

[[bench]]
name = "request_handling"
harness = false
