[package]
name = "metis-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2"
